# vipii

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: _helpers.py  basic_detection.py  concurrent_detection.py  custom_only.py  custom_pattern.py  custom_recognizers.yml  customer_service.txt  ner_model.py  ner_strategies.py  redaction.py  spark_benchmark.py  usage.py  yaml_config.py
src/vipii/: __init__.py  builtin_recognizers.yml  cli.py  config.py  constants.py  detector.py  models.py  presidio.py  scoring.py  spark.py
src/vipii/recognizers/: __init__.py  base.py  ner.py  pattern.py  registry.py  validators.py
tests/: .gitignore  test_cli.py  test_config.py  test_detector.py  test_fixture_dataset.py  test_ner.py  test_spark.py
tests/fixtures/: synthetic_vietnamese_pii.jsonl
