[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vipii"
version = "0.1.2"
description = "Vietnamese PII detection with regex recognizers, validators, and context scoring."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "vipii contributors" }
]
keywords = ["pii", "vietnamese", "privacy", "redaction", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
ner = ["torch>=2.0.0", "transformers>=4.40.0"]
presidio = ["presidio-analyzer>=2.2.0"]
dev = ["pytest>=8.0", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://github.com/hmtrii/vipii"
Repository = "https://github.com/hmtrii/vipii"
Issues = "https://github.com/hmtrii/vipii/issues"

[project.scripts]
vipii = "vipii.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vipii"]

[tool.hatch.build.targets.wheel.force-include]
"src/vipii/builtin_recognizers.yml" = "vipii/builtin_recognizers.yml"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
